Refine IAM user and setup services